dashboard: scheduled update a3c8e385462518cdf396210aab43928404ad1c09

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width,initial-scale=1">
-<title>투자 대시보드 2026-02-16 04:29</title>
+<title>투자 대시보드 2026-02-17 02:41</title>
 <style>
 :root{--bg:#0f1117;--card:#1a1d27;--border:#2a2d3a;--text:#e2e8f0;
       --muted:#94a3b8;--green:#4ade80;--red:#f87171;--yellow:#fbbf24;
@@ -161,11 +161,11 @@ tr:last-child td{border-bottom:none}
   <div class="header">
     <div>
       <h1>📊 투자 대시보드</h1>
-      <div class="sub">업데이트: 2026-02-16 04:29 &nbsp;|&nbsp; 환율: ₩1,439/USD</div>
+      <div class="sub">업데이트: 2026-02-17 02:41 &nbsp;|&nbsp; 환율: ₩1,443/USD</div>
     </div>
     <div>
-      <div class="total-val">₩34,611,694</div>
-      <div class="total-usd">≈ $24,048 USD</div>
+      <div class="total-val">₩34,669,997</div>
+      <div class="total-usd">≈ $24,019 USD</div>
     </div>
   </div>
 
@@ -179,8 +179,8 @@ tr:last-child td{border-bottom:none}
     <div class="summary-grid">
       <div class="summary-item">
         <div class="summary-label">총 평가액</div>
-        <div class="summary-value blue">₩34,611,694</div>
-        <div class="summary-sub muted">≈ $24,048</div>
+        <div class="summary-value blue">₩34,669,997</div>
+        <div class="summary-sub muted">≈ $24,019</div>
       </div>
       <div class="summary-item">
         <div class="summary-label">총 매입금액</div>
@@ -189,13 +189,13 @@ tr:last-child td{border-bottom:none}
       </div>
       <div class="summary-item">
         <div class="summary-label">총 수익률</div>
-        <div class="summary-value"><span class="up">+33.7%</span></div>
-        <div class="summary-sub"><span class="up">+₩4,453,241</span></div>
+        <div class="summary-value"><span class="up">+33.9%</span></div>
+        <div class="summary-sub"><span class="up">+₩4,476,868</span></div>
       </div>
       <div class="summary-item">
         <div class="summary-label">연간 배당 예측</div>
-        <div class="summary-value green">₩336,623</div>
-        <div class="summary-sub muted">월 ≈ ₩28,052 · 2.5%</div>
+        <div class="summary-value green">₩337,046</div>
+        <div class="summary-sub muted">월 ≈ ₩28,087 · 2.5%</div>
       </div>
     </div>
 <div class="summary-divider"></div>
@@ -212,7 +212,7 @@ tr:last-child td{border-bottom:none}
 
     <div class="acc-pnl-row">
       <span>해외주식계좌</span>
-      <span>₩8,135,718 &nbsp; <span class="up">+40.6%</span> <span class="muted" style="font-size:11px">(+₩2,348,404)</span></span>
+      <span>₩8,159,345 &nbsp; <span class="up">+41.0%</span> <span class="muted" style="font-size:11px">(+₩2,372,031)</span></span>
     </div>
     </div>
   </div>
@@ -225,7 +225,7 @@ tr:last-child td{border-bottom:none}
     <div class="risk-grid">
       <div class="risk-item">
         <div class="risk-label">VIX (시장 공포)</div>
-        <div class="risk-value risk-ok">20.6</div>
+        <div class="risk-value risk-ok">21.2</div>
         <div class="risk-sub">안정 구간</div>
       </div>
       <div class="risk-item">
@@ -240,7 +240,7 @@ tr:last-child td{border-bottom:none}
       </div>
       <div class="risk-item">
         <div class="risk-label">최대 자산군 비중</div>
-        <div class="risk-value risk-warn">34.4%</div>
+        <div class="risk-value risk-warn">34.5%</div>
         <div class="risk-sub">크립토 (BTC)</div>
       </div>
     </div>
@@ -281,34 +281,34 @@ tr:last-child td{border-bottom:none}
 
             <div class="ind-card">
               <div class="ind-label">VIX (공포지수)</div>
-              <div class="ind-value">20.60</div>
-              <div class="ind-chg down">-1.06%</div>
+              <div class="ind-value">21.20</div>
+              <div class="ind-chg up">+2.91%</div>
             </div>
 
             <div class="ind-card">
               <div class="ind-label">USD/KRW 환율</div>
-              <div class="ind-value">₩1,439.3</div>
-              <div class="ind-chg down">-0.11%</div>
+              <div class="ind-value">₩1,443.5</div>
+              <div class="ind-chg up">+0.27%</div>
             </div>
 
             <div class="ind-card">
               <div class="ind-label">미국 10년 금리</div>
               <div class="ind-value">4.056%</div>
-              <div class="ind-chg down">-1.17%</div>
+              <div class="ind-chg neutral">+0.00%</div>
             </div>
 </div></div>
 <div class="ind-group"><div class="ind-group-label">원자재</div><div class="ind-row">
 
             <div class="ind-card">
               <div class="ind-label">금 ($/oz)</div>
-              <div class="ind-value">$4,995.70</div>
-              <div class="ind-chg down">-0.52%</div>
+              <div class="ind-value">$4,985.00</div>
+              <div class="ind-chg down">-0.74%</div>
             </div>
 
             <div class="ind-card">
               <div class="ind-label">구리 ($/lb)</div>
-              <div class="ind-value">$5.75</div>
-              <div class="ind-chg down">-0.70%</div>
+              <div class="ind-value">$5.74</div>
+              <div class="ind-chg down">-0.95%</div>
             </div>
 
             <div class="ind-card">
@@ -321,11 +321,11 @@ tr:last-child td{border-bottom:none}
 
             <div class="ind-card">
               <div class="ind-label">BTC (USD)</div>
-              <div class="ind-value">$68,729</div>
+              <div class="ind-value">$68,913</div>
               <div class="ind-chg neutral">+0.00%</div>
             </div>
 </div></div>
-      <div class="data-source">출처: Yahoo Finance &nbsp;|&nbsp; 조회: 2026-02-16 04:29</div>
+      <div class="data-source">출처: Yahoo Finance &nbsp;|&nbsp; 조회: 2026-02-17 02:41</div>
     </div>
   </div>
 
@@ -348,7 +348,7 @@ tr:last-child td{border-bottom:none}
               <div class="bar-cur" style="width:47.4%;background:#60a5fa"></div>
             </div>
             <span class="bar-gap red">
-              +8.7%p &nbsp; ₩3,016,598 초과
+              +8.7%p &nbsp; ₩3,026,195 초과
             </span>
           </div>
         </div>
@@ -367,7 +367,7 @@ tr:last-child td{border-bottom:none}
               <div class="bar-cur" style="width:23.0%;background:#4ade80"></div>
             </div>
             <span class="bar-gap muted">
-              -3.5%p &nbsp; ₩1,203,678 부족
+              -3.5%p &nbsp; ₩1,207,139 부족
             </span>
           </div>
         </div>
@@ -386,7 +386,7 @@ tr:last-child td{border-bottom:none}
               <div class="bar-cur" style="width:0.0%;background:#fbbf24"></div>
             </div>
             <span class="bar-gap blue">
-              -12.0%p &nbsp; ₩4,153,403 부족
+              -12.0%p &nbsp; ₩4,160,400 부족
             </span>
           </div>
         </div>
@@ -405,7 +405,7 @@ tr:last-child td{border-bottom:none}
               <div class="bar-cur" style="width:0.0%;background:#f472b6"></div>
             </div>
             <span class="bar-gap blue">
-              -10.0%p &nbsp; ₩3,461,169 부족
+              -10.0%p &nbsp; ₩3,467,000 부족
             </span>
           </div>
         </div>
@@ -424,7 +424,7 @@ tr:last-child td{border-bottom:none}
               <div class="bar-cur" style="width:0.0%;background:#a78bfa"></div>
             </div>
             <span class="bar-gap muted">
-              -5.0%p &nbsp; ₩1,730,585 부족
+              -5.0%p &nbsp; ₩1,733,500 부족
             </span>
           </div>
         </div>
@@ -443,7 +443,7 @@ tr:last-child td{border-bottom:none}
               <div class="bar-cur" style="width:10.8%;background:#34d399"></div>
             </div>
             <span class="bar-gap muted">
-              +2.4%p &nbsp; ₩844,429 초과
+              +2.4%p &nbsp; ₩842,680 초과
             </span>
           </div>
         </div>
@@ -462,7 +462,7 @@ tr:last-child td{border-bottom:none}
               <div class="bar-cur" style="width:0.0%;background:#fb923c"></div>
             </div>
             <span class="bar-gap blue">
-              -10.0%p &nbsp; ₩3,461,169 부족
+              -10.0%p &nbsp; ₩3,467,000 부족
             </span>
           </div>
         </div>
@@ -481,7 +481,7 @@ tr:last-child td{border-bottom:none}
               <div class="bar-cur" style="width:29.0%;background:#94a3b8"></div>
             </div>
             <span class="bar-gap muted">
-              -0.5%p &nbsp; ₩162,969 부족
+              -0.5%p &nbsp; ₩171,630 부족
             </span>
           </div>
         </div>
@@ -500,7 +500,7 @@ tr:last-child td{border-bottom:none}
               <div class="bar-cur" style="width:20.8%;background:#38bdf8"></div>
             </div>
             <span class="bar-gap muted">
-              +0.4%p &nbsp; ₩131,626 초과
+              +0.4%p &nbsp; ₩125,795 초과
             </span>
           </div>
         </div>
@@ -509,17 +509,17 @@ tr:last-child td{border-bottom:none}
           <div class="alloc-meta">
             <span class="alloc-name">크립토 (BTC)</span>
             <span class="alloc-pcts">
-              <b>34.4%</b> <span class="muted">/ 목표 5%</span>
+              <b>34.5%</b> <span class="muted">/ 목표 5%</span>
               <span class="badge badge-over">초과</span>
             </span>
           </div>
           <div class="bar-wrap">
             <div class="bar-bg">
               <div class="bar-tgt" style="width:10%;background:#f59e0b"></div>
-              <div class="bar-cur" style="width:68.8%;background:#f59e0b"></div>
+              <div class="bar-cur" style="width:69.0%;background:#f59e0b"></div>
             </div>
             <span class="bar-gap red">
-              +29.4%p &nbsp; ₩10,180,321 초과
+              +29.5%p &nbsp; ₩10,211,997 초과
             </span>
           </div>
         </div>
@@ -589,7 +589,7 @@ tr:last-child td{border-bottom:none}
 </tbody></table></div>
 
         <div class="acc-block">
-          <div class="acc-title">해외주식계좌 <span class="muted">₩8,135,718</span></div>
+          <div class="acc-title">해외주식계좌 <span class="muted">₩8,159,345</span></div>
           <table>
             <thead><tr>
               <th>종목</th><th class="tr">현재가</th>
@@ -601,24 +601,24 @@ tr:last-child td{border-bottom:none}
                 <td>SCHD <span class="muted">(40주)</span></td>
                 <td class="tr">$31.61</td>
                 <td class="tr up">+0.86%</td>
-                <td class="tr">₩1,819,826</td>
-                <td class="tr"><span class="up">+18.4%</span><br><span class="muted" style="font-size:10px">+₩282,624</span></td>
+                <td class="tr">₩1,825,111</td>
+                <td class="tr"><span class="up">+18.7%</span><br><span class="muted" style="font-size:10px">+₩287,909</span></td>
               </tr>
 
               <tr>
                 <td>VOO <span class="muted">(7주)</span></td>
                 <td class="tr">$626.89</td>
                 <td class="tr up">+0.06%</td>
-                <td class="tr">₩6,315,892</td>
-                <td class="tr"><span class="up">+48.6%</span><br><span class="muted" style="font-size:10px">+₩2,065,780</span></td>
+                <td class="tr">₩6,334,234</td>
+                <td class="tr"><span class="up">+49.0%</span><br><span class="muted" style="font-size:10px">+₩2,084,122</span></td>
               </tr>
 </tbody></table></div>
 
     <div class="cash-summary">
-      <div class="cash-row"><span class="muted">현금 (증권+예금)</span><span>₩5,028,786</span></div>
+      <div class="cash-row"><span class="muted">현금 (증권+예금)</span><span>₩5,028,869</span></div>
       <div class="cash-row">
         <span class="muted">크립토 (바이낸스) <span style="font-size:10px">· config.json (수동)</span></span>
-        <span>₩11,910,906</span>
+        <span>₩11,945,497</span>
       </div>
     </div>
       <div class="data-source">주식: Yahoo Finance &nbsp;|&nbsp; 크립토: config.json (수동, API 미연결)</div>
@@ -642,8 +642,8 @@ tr:last-child td{border-bottom:none}
               <div class="rebal-right">
                 <span class="badge badge-over">초과</span>
                 <div class="red" style="font-size:12px;margin-top:4px">
-                  34.4% → 5%
-                  (+29.4%p)
+                  34.5% → 5%
+                  (+29.5%p)
                 </div>
               </div>
             </div>
@@ -719,7 +719,7 @@ tr:last-child td{border-bottom:none}
           <div class="ev-body">
             <div class="ev-head">
               <span class="ev-title">FOMC 회의</span>
-              <span class="ev-date muted">2026-03-18 <b>(D-30)</b></span>
+              <span class="ev-date muted">2026-03-18 <b>(D-29)</b></span>
             </div>
             <div class="ev-desc muted">금리 결정 및 점도표 발표. 동결 예상이나 성명 변화 주목</div>
           </div>
@@ -730,7 +730,7 @@ tr:last-child td{border-bottom:none}
           <div class="ev-body">
             <div class="ev-head">
               <span class="ev-title">예금 만기 (500만원)</span>
-              <span class="ev-date muted">2026-03-20 <b>(D-32)</b></span>
+              <span class="ev-date muted">2026-03-20 <b>(D-31)</b></span>
             </div>
             <div class="ev-desc muted">재원 배치: 한국 전기/전력 → 원자재 → 저PBR 순으로 분할 매수 검토</div>
           </div>
@@ -741,7 +741,7 @@ tr:last-child td{border-bottom:none}
           <div class="ev-body">
             <div class="ev-head">
               <span class="ev-title">Q1 분기 리밸런싱 리뷰</span>
-              <span class="ev-date muted">2026-04-01 <b>(D-44)</b></span>
+              <span class="ev-date muted">2026-04-01 <b>(D-43)</b></span>
             </div>
             <div class="ev-desc muted">/dashboard 실행 → 이탈 항목 확인 → 리밸런싱 계획 수립</div>
           </div>
@@ -752,7 +752,7 @@ tr:last-child td{border-bottom:none}
           <div class="ev-body">
             <div class="ev-head">
               <span class="ev-title">FOMC 회의</span>
-              <span class="ev-date muted">2026-06-17 <b>(D-121)</b></span>
+              <span class="ev-date muted">2026-06-17 <b>(D-120)</b></span>
             </div>
             <div class="ev-desc muted">6월 FOMC. 금리 인하 여부 주목</div>
           </div>
@@ -763,7 +763,7 @@ tr:last-child td{border-bottom:none}
           <div class="ev-body">
             <div class="ev-head">
               <span class="ev-title">Q2 분기 리밸런싱 리뷰</span>
-              <span class="ev-date muted">2026-07-01 <b>(D-135)</b></span>
+              <span class="ev-date muted">2026-07-01 <b>(D-134)</b></span>
             </div>
             <div class="ev-desc muted">/dashboard 실행 → 이탈 항목 확인</div>
           </div>
@@ -774,7 +774,7 @@ tr:last-child td{border-bottom:none}
           <div class="ev-body">
             <div class="ev-head">
               <span class="ev-title">상법 2차 개정 시행</span>
-              <span class="ev-date muted">2026-09-10 <b>(D-206)</b></span>
+              <span class="ev-date muted">2026-09-10 <b>(D-205)</b></span>
             </div>
             <div class="ev-desc muted">집중투표제 의무화, 감사위원 분리선임 확대 시행. 금융지주 배당 확대 모멘텀 확인</div>
           </div>
@@ -785,7 +785,7 @@ tr:last-child td{border-bottom:none}
           <div class="ev-body">
             <div class="ev-head">
               <span class="ev-title">FOMC 회의</span>
-              <span class="ev-date muted">2026-09-16 <b>(D-212)</b></span>
+              <span class="ev-date muted">2026-09-16 <b>(D-211)</b></span>
             </div>
             <div class="ev-desc muted">9월 FOMC</div>
           </div>
@@ -796,7 +796,7 @@ tr:last-child td{border-bottom:none}
           <div class="ev-body">
             <div class="ev-head">
               <span class="ev-title">Q3 분기 리밸런싱 리뷰</span>
-              <span class="ev-date muted">2026-10-01 <b>(D-227)</b></span>
+              <span class="ev-date muted">2026-10-01 <b>(D-226)</b></span>
             </div>
             <div class="ev-desc muted">/dashboard 실행 → 이탈 항목 확인</div>
           </div>
@@ -807,7 +807,7 @@ tr:last-child td{border-bottom:none}
           <div class="ev-body">
             <div class="ev-head">
               <span class="ev-title">FOMC 회의</span>
-              <span class="ev-date muted">2026-12-16 <b>(D-303)</b></span>
+              <span class="ev-date muted">2026-12-16 <b>(D-302)</b></span>
             </div>
             <div class="ev-desc muted">12월 FOMC. 연간 통화정책 방향 결산</div>
           </div>
@@ -818,7 +818,7 @@ tr:last-child td{border-bottom:none}
           <div class="ev-body">
             <div class="ev-head">
               <span class="ev-title">Q4 분기 리밸런싱 리뷰 + 연간 결산</span>
-              <span class="ev-date muted">2027-01-01 <b>(D-319)</b></span>
+              <span class="ev-date muted">2027-01-01 <b>(D-318)</b></span>
             </div>
             <div class="ev-desc muted">연간 성과 평가 및 내년 목표 배분 재검토</div>
           </div>
@@ -830,7 +830,7 @@ tr:last-child td{border-bottom:none}
   <div class="grid2">
     <div class="card">
       <div class="card-title">배당 수익 예측 (연간)</div>
-      <div class="div-total green">연간 예측 배당: ₩336,623 &nbsp;<span class="muted" style="font-size:12px">/ 월 ≈ ₩28,052</span></div>
+      <div class="div-total green">연간 예측 배당: ₩337,046 &nbsp;<span class="muted" style="font-size:12px">/ 월 ≈ ₩28,087</span></div>
 
     <div class="div-row">
       <span>TIGER 미국배당다우존스 <span class="muted">(3.0%)</span></span>
@@ -839,7 +839,7 @@ tr:last-child td{border-bottom:none}
 
     <div class="div-row">
       <span>VOO <span class="muted">(1.3%)</span></span>
-      <span class="green">₩82,107/년</span>
+      <span class="green">₩82,345/년</span>
     </div>
 
     <div class="div-row">
@@ -849,7 +849,7 @@ tr:last-child td{border-bottom:none}
 
     <div class="div-row">
       <span>SCHD <span class="muted">(3.5%)</span></span>
-      <span class="green">₩63,694/년</span>
+      <span class="green">₩63,879/년</span>
     </div>
 
     <div class="div-row">
@@ -1007,8 +1007,8 @@ tr:last-child td{border-bottom:none}
               <div><span class="wl-name">금 선물</span>
                 <span class="wl-note muted">달러헷지, 중앙은행 매입</span></div>
               <div class="wl-right">
-                <span>$4,995.70</span>
-                <span class="down" style="margin-left:8px">-0.52%</span>
+                <span>$4,985.00</span>
+                <span class="down" style="margin-left:8px">-0.74%</span>
               </div>
             </div>
 
@@ -1016,8 +1016,8 @@ tr:last-child td{border-bottom:none}
               <div><span class="wl-name">구리 선물</span>
                 <span class="wl-note muted">AI인프라·전기화 수요</span></div>
               <div class="wl-right">
-                <span>$5.75</span>
-                <span class="down" style="margin-left:8px">-0.70%</span>
+                <span>$5.74</span>
+                <span class="down" style="margin-left:8px">-0.95%</span>
               </div>
             </div>
 
@@ -1030,7 +1030,7 @@ tr:last-child td{border-bottom:none}
               </div>
             </div>
 </div>
-      <div class="data-source">출처: Yahoo Finance &nbsp;|&nbsp; 조회: 2026-02-16 04:29</div>
+      <div class="data-source">출처: Yahoo Finance &nbsp;|&nbsp; 조회: 2026-02-17 02:41</div>
     </div>
   </div>
 
